<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:id="@+id/frame_layout"
        android:layout_above="@+id/linear_layout">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/image_background"
            android:layout_gravity="top|left|bottom|right" />

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progress_bar"
            android:layout_gravity="center"
            android:visibility="visible" />

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:id="@+id/image_like"
            android:layout_gravity="center"
            android:src="@drawable/like_grey"
            android:visibility="invisible" />
    </FrameLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/text_date"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linear_layout"
        android:layout_above="@+id/linear_layout2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/fragment_title"
            android:id="@+id/text_title"
            android:textSize="17sp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp" />

        <ImageView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:id="@+id/image_view"
            android:src="@color/colorPrimaryDark" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/fragment_name_author"
            android:id="@+id/text_name_author"
            android:textSize="17sp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linear_layout2"
        android:layout_above="@+id/image_view3">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/fragment_date"
            android:id="@+id/text_date"
            android:textSize="17sp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp" />

        <ImageView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:id="@+id/image_view2"
            android:src="@color/colorPrimaryDark" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/fragment_number_of_likes"
            android:id="@+id/text_number_likes"
            android:textSize="17sp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/image_view3"
        android:src="@color/colorPrimaryDark"
        android:layout_above="@+id/text_full_description" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_full_description"
        android:id="@+id/text_full_description"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/button_expand" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_expand"
        android:id="@+id/button_expand"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>